Added food dbs and ranking module
